--- a/nanubang_app/static/css/contract_confirm.css
+++ b/nanubang_app/static/css/contract_confirm.css
@@ -35,6 +35,7 @@
 
 #box5{position: absolute;height:350px;max-width:100%;overflow: hidden;background-color: #e2e2e2;}
 #box5 > div{max-width:900px;margin:0 auto;padding-top:20px;width:90%}
+#box5 > img{width:100%}
 #box5 > div > div{float:left;}
 #box5 .left{width:20%;font-size:28pt;text-align: left;font-weight: bold;line-height: 150%;}
 #box5 .left span{color:#2eae7d}
