--- a/nanubang_app/templates/frame.html
+++ b/nanubang_app/templates/frame.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
     <head>
-        <title>장고</title>
+        <title>나누방</title>
         <meta name="viewport" content="width=device-width" content="initial-scale=1.0">
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="/static/slick/slick.css"/>
@@ -142,7 +142,7 @@
                 <div>Copyright Nanubang Inc. All right reserved.</div>
                 <br>
                 <div>상호 : 나누방 | 대표 : 임상욱 | 사업자등록번호 : 000-00-000000</div>
-                <div> 주소 : 서울특별시 노원구 공릉로 232 수연관 207호 | 전화번호 : 02)000-0000 | 카카오톡 : 나누방</div>
+                <div> 주소 : 서울특별시 노원구 공릉로 232 수연관 000호 | 전화번호 : 02)000-0000 | 카카오톡 : 나누방</div>
                 <br>
             </div>
         </footer>
